force-app/main/default/objects/Monthly_Budget__c/fields/Amount_Earned__c.field-meta.xml
<CustomField>
    <fullName>Amount_Earned__c</fullName>
    <label>Amount Earned</label>
    <summarizedField>Budget__c.Amount_Earned__c</summarizedField>
    <summaryForeignKey>Budget__c.Monthly_Budget__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>