force-app/main/default/objects/Monthly_Budget__c/validationRules/End_After_Start.validationRule-meta.xml
<ValidationRule>
    <fullName>End_After_Start</fullName>
    <active>true</active>
    <errorConditionFormula>EndDate__c &lt;=  StartDate__c</errorConditionFormula>
    <errorMessage>End date must be after the start date.</errorMessage>
</ValidationRule>